--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <ul>
                 <li>
                     <a href="#">
-                        <span class="icon"><img src="logo.png" style="width: 30px;" alt=""></span>
-                        <span class="title">Movie Friends</span>
+                        <span class="icon"><img src="logo.png" style="width: 60px;" alt=""></span>
+                        <span class="title" style="color: var(--orange); font-weight:700; font-size: 1.75em;">Movie Friends</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="tv-outline"></ion-icon></span>
+                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="title">Dashboard</span>
                     </a>
                 </li>
