--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- Navigation Start -->
         <div class="navigation">
             <ul>
                 <li>
@@ -68,9 +70,56 @@
                 </li>
             </ul>
         </div>
+        <!-- Navigation End -->
+
+
+        <!-- Main Start -->
+        <div class="main">
+            <div class="topbar">
+                <div class="toggle"> <ion-icon name="menu-outline"></ion-icon></div>
+                <!-- search-->
+                <div class="search">
+                    <label>
+                        <input type="text" placeholder="Search here...">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </label>
+                </div>
+                <!-- search end -->
+
+                <!-- user  -->
+                <div class="user">
+                    <img src="https://images.generated.photos/IeTmPRT6IFvnptHsaGKFGX-aZh24pgntJa4Ndbjhe0w/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMDky/ODM5LmpwZw.jpg" alt="admin image">
+                </div>
+                <!-- user end -->
+            </div>
+        </div>
+        <!-- Main End -->
+
+
+
+
+
+
+        <!-- End of component-->
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+<script>
+    //add hover class in selected list item
+    let list = document.querySelectorAll('.navigation li');
+
+    function activeLink(){
+        list.forEach((item)=>
+        item.classList.remove('hovered'));
+        this.classList.add('hovered');
+    }
+
+    list.forEach((item)=>{
+        item.addEventListener('mouseover',activeLink);
+    })
+</script>
+
 </body>
 </html>
