--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
         <!-- Main Start -->
         <div class="main">
+
+             <!-- topbar Start -->
             <div class="topbar">
                 <div class="toggle"> <ion-icon name="menu-outline"></ion-icon></div>
                 <!-- search-->
@@ -94,6 +96,54 @@
             </div>
                 <!-- user end -->
             </div>
+             <!-- topbar End -->
+
+
+              <!-- card Start -->
+            <div class="cardBox">
+
+                <div class="card">
+                    <div>
+                        <div class="numbers"> 254 358</div>
+                        <div class="cardName">Daily Vies</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div>
+                        <div class="numbers"> 54 988</div>
+                        <div class="cardName">Users</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="people-outline"></ion-icon> </div>
+                </div>
+
+                <div class="card">
+                    <div>
+                        <div class="numbers"> 7 954</div>
+                        <div class="cardName">Movies & Shows</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="videocam-outline"></ion-icon>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div>
+                        <div class="numbers"> 758 378</div>
+                        <div class="cardName">Comments</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="chatbubbles-outline"></ion-icon>
+                    </div>
+                </div>
+
+            </div>
+               <!-- card End -->
+
         </div>
         <!-- Main End -->
 
