First part ready

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers"> 7 954</div>
-                        <div class="cardName">Movies & Shows</div>
+                        <div class="cardName">Movies</div>
                     </div>
                     <div class="iconBx">
                         <ion-icon name="videocam-outline"></ion-icon>
@@ -168,10 +168,10 @@
 
             <!-- Details list  Start -->
             <div class="details">
-
+                <!-- left part  Start -->
                 <div class="recentMovies">
 
-                    <div class="cardHeader">
+                    <div class="cardHeader" style="margin-bottom: -50px;">  <!-- PROBLEM TO SOLVE!-->                     
                         <h2>Resent Movies</h2>
                         <a href="#" class="btn">View All</a>
                     </div>
@@ -182,70 +182,107 @@
                                 <td>Name</td>
                                 <td>Genre</td>
                                 <td>Year</td>
-                                <td>Status</td>                               
+                                <td>Status</td>
                             </tr>
                         </thead>
-                        
 
-                        <tbody>                           
+
+                        <tbody>
                             <tr>
                                 <td>The Northman</td>
                                 <td>Adventure/Action</td>
                                 <td>2022</td>
-                                <td class="status active">Active</td>
+                                <td><span class="status active">Active</span></td>
                             </tr>
 
                             <tr>
                                 <td>The Batman</td>
-                                <td>Action/Adventure,</td>
+                                <td>Action/Adventure</td>
                                 <td>2022</td>
-                                <td class="status inprogres">In Progress</td>
+                                <td><span  class="status inprogres">In Progress</span> </td>
                             </tr>
 
                             <tr>
                                 <td>Hatching</td>
                                 <td>Horror</td>
                                 <td>2022</td>
-                                <td class="status pending">Pending</td>
+                                <td > <span class="status pending">Pending</span> </td>
                             </tr>
 
                             <tr>
                                 <td>Borrego</td>
-                                <td>Mystery & thriller</td>
+                                <td>Mystery/Thriller</td>
                                 <td>2022</td>
-                                <td class="status active">Active</td>
+                                <td ><span class="status active">Active</span></td>
                             </tr>
 
                             <tr>
                                 <td>Dual</td>
                                 <td>Sci-fi/Comedy</td>
-                                <td>Pending</td>
-                                <td class="status pending">Pending</td>
+                                <td>2021</td>
+                                <td > <span class="status pending">Pending</span> </td>
                             </tr>
 
                             <tr>
                                 <td>365 Days</td>
                                 <td>Drama/Romance</td>
                                 <td>2020</td>
-                                <td class="status inprogres">In Progress</td>
+                                <td ><span class="status inprogres">In Progress</span> </td>
                             </tr>
 
                         </tbody>
                     </table>
 
                 </div>
+                <!-- left part  End -->
+
+
+                <!-- right part  Start -->
+                <div class="recentUsers">
+                    <div class="cardHeader">
+                        <h2>Recent Users</h2>
+                    </div>
+
+                    <table>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/e18XdOGiLE_DCjcV07sGbJPUnQ7uZ7C9DVk9aY8F06A/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMjQ5/NzUyLmpwZw.jpg" style="width: 40px;" alt=""></div></td>
+                            <td><h4>Lin<br><span>China</span></h4></td>
+                        </tr>
+
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/10BOAC41ZVNeiCeyRJNSg_8gn40MBjXMgZSE_yZIBQo/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMDM3/MjUzLmpwZw.jpg" style="width: 40px;" alt=""></div></td>
+                            <td><h4>Hans<br><span>Germany</span></h4></td>
+                        </tr>
+
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/dfLWMe1jCmc5RgaxruT0DfoiHyDZOOsIday6ZyV6cXs/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMTY5/NDE2LmpwZw.jpg" style="width: 40px;" alt=""></div></td>
+                            <td><h4>Akio<br><span>Japan</span></h4></td>
+                        </tr>
+
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/KZhiaiwgKfn07KUghq0WJ4u8cqJ0RMR_NwXZOrXLrLQ/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMjg3/NzA4LmpwZw.jpg" style="width: 40px;" alt=""></div></td>
+                            <td><h4>Abilio<br><span> Portuguese</span></h4></td>
+                        </tr>
+
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/Vn2RAJDGMAi2p9PNwfrvu0etf_qSePusosTLt-t8QUU/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMDgz/NzE0LmpwZw.jpg" style="width: 40px;" alt=""></div></td>
+                            <td><h4>Adriana<br><span>Brazil</span></h4></td>
+                        </tr>
+
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/m_R01VWlIAUJKSqU_ZNbSxbBEQZj6KbZFDUdIscl7ww/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/ODUxMzQzLmpwZw.jpg" style="width: 40px;" alt=""></div></td>
+                            <td><h4>Ivan<br><span>Bulgaria</span></h4></td>
+                        </tr>
+                    </table>
+
+                </div>
+                <!-- right part  End -->
             </div>
             <!-- Details list  Start -->
 
 
         </div>
         <!-- Main End -->
-
-
-
-
-
-
 
     </div>
     <!-- End of component-->
