--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
             <!-- card End -->
 
 
+             <!-- Charts  Start -->
+             <div class="graphBox">
+                 <div class="box">
+                    <canvas id="myChart" width="200" height="200"></canvas>                    </div>
+
+                 <div class="box">
+                    <canvas id="myChartOpinions"></canvas> 
+                      </div>
+             </div>
+             <!-- Charts  End -->
+
+
             <!-- Details list  Start -->
             <div class="details">
                 <!-- left part  Start -->
@@ -251,7 +263,7 @@
 
                         <tr>
                             <td width="60px"><div class="imgBx"><img src="https://images.generated.photos/10BOAC41ZVNeiCeyRJNSg_8gn40MBjXMgZSE_yZIBQo/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy8wMDM3/MjUzLmpwZw.jpg" style="width: 40px;" alt=""></div></td>
-                            <td><h4>Hans<br><span>Germany</span></h4></td>
+                            <td><h4>Hans<br><span>Germany</span></h4></td>      
                         </tr>
 
                         <tr>
@@ -288,8 +300,10 @@
     <!-- End of component-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
-    <script>
+  
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+    <script src="my-chart.js"></script>
+  <script>
         //menu toggle:
         let toggle = document.querySelector('.toggle');
         let navigation = document.querySelector('.navigation');
