--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <li>
                     <a href="#">
                         <span class="icon">
-                            <ion-icon name="exit-outline"></ion-icon>
+                            <ion-icon name="exit-outline" style="color: var(--orange)"></ion-icon>
                         </span>
                         <span class="title">Sign out</span>
                     </a>
